objects/RAV_UnitConversionRates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Cotización de unidades libres en pesos argentinos. Se utiliza en ajustes de unidades para calcular los limites de RAV</description>
    <fields>
        <fullName>DatosToPesos__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Valor de 1MB en pesos argentinos</description>
        <label>DatosToPesos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutosToPesos__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Valor de 1 minutos en pesos argentinos</description>
        <inlineHelpText>Valor de 1 minutos en pesos argentinos</inlineHelpText>
        <label>MinutosToPesos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMSToPesos__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Valor de 1 SMS en pesos argentinos</description>
        <inlineHelpText>Valor de 1 SMS en pesos argentinos</inlineHelpText>
        <label>SMSToPesos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RAV_UnitConversionRates</label>
</CustomObject>